[project]
name = "bioautoml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "biopython>=1.83",
    "catboost>=1.2.8",
    "hyperopt>=0.2.7",
    "igraph>=0.11.8",
    "imbalanced-learn>=0.12.4",
    "lightgbm>=4.6.0",
    "matplotlib-inline>=0.1.7",
    "pandas>=2.0.3",
    "scikit-learn==1.1.0",
    "setuptools>=75.3.2",
    "tpot>=0.12.1",
    "xgboost>=2.1.4",
]
